--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
@@ -25,6 +26,7 @@
     "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-underline-tabbar": "^1.3.6",
     "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.2",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
