--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
+    "react-native-scrollable-tab-view": "^1.0.0",
+    "react-native-underline-tabbar": "^1.3.6",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
