--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.1",
     "@react-navigation/drawer": "^5.9.2",
+    "@react-navigation/material-top-tabs": "^5.2.19",
     "@react-navigation/native": "^5.7.5",
     "@react-navigation/stack": "^5.9.2",
     "expo": "~39.0.2",
@@ -20,10 +21,13 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-modal": "^11.5.6",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-scrollable-tab-view": "^1.0.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-tab-view": "^2.15.2",
     "react-native-underline-tabbar": "^1.3.6",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.2",
