--- a/package.json
+++ b/package.json
@@ -8,18 +8,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-seoul/kakao-login": "^2.10.1",
     "@react-navigation/bottom-tabs": "^5.9.1",
     "@react-navigation/drawer": "^5.9.2",
     "@react-navigation/material-top-tabs": "^5.2.19",
     "@react-navigation/native": "^5.7.5",
     "@react-navigation/stack": "^5.9.2",
+    "axios": "^0.20.0",
     "expo": "~39.0.2",
+    "expo-google-app-auth": "^8.1.3",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-check-box": "^2.1.7",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-modal": "^11.5.6",
     "react-native-reanimated": "~1.13.0",
@@ -30,6 +35,7 @@
     "react-native-tab-view": "^2.15.2",
     "react-native-underline-tabbar": "^1.3.6",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "^10.9.2",
     "react-navigation": "^4.4.2",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
