--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.1",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-seoul/kakao-login": "^2.10.1",
@@ -35,7 +36,7 @@
     "react-native-tab-view": "^2.15.2",
     "react-native-underline-tabbar": "^1.3.6",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "^10.9.2",
+    "react-native-webview": "^10.10.0",
     "react-navigation": "^4.4.2",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
