--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-web": "~0.13.12",
     "react-native-webview": "^10.10.0",
     "react-navigation": "^4.4.2",
+    "react-navigation-tabs": "^2.9.2",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
