--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-check-box": "^2.1.7",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-image-picker": "^2.3.4",
     "react-native-modal": "^11.5.6",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
