--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-check-box": "^2.1.7",
+    "react-native-dropdown": "0.0.6",
+    "react-native-dropdown-picker": "^3.7.0",
+    "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-image-picker": "^2.3.4",
     "react-native-modal": "^11.5.6",
@@ -35,7 +38,9 @@
     "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.15.2",
+    "react-native-textinput-with-icons": "^1.0.18",
     "react-native-underline-tabbar": "^1.3.6",
+    "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-native-webview": "^10.10.0",
     "react-navigation": "^4.4.2",
