--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/drawer": "^5.9.2",
     "@react-navigation/material-top-tabs": "^5.2.19",
     "@react-navigation/native": "^5.7.5",
-    "@react-navigation/stack": "^5.9.2",
+    "@react-navigation/stack": "^5.11.1",
     "axios": "^0.20.0",
     "expo": "~39.0.2",
     "expo-google-app-auth": "^8.1.3",
@@ -43,7 +43,8 @@
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-native-webview": "^10.10.0",
-    "react-navigation": "^4.4.2",
+    "react-navigation": "^4.4.3",
+    "react-navigation-stack": "^2.10.0",
     "react-navigation-tabs": "^2.9.2",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
