--- a/package.json
+++ b/package.json
@@ -35,14 +35,13 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
-    "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.15.2",
     "react-native-textinput-with-icons": "^1.0.18",
     "react-native-underline-tabbar": "^1.3.6",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "^10.10.0",
+    "react-native-webview": "^10.7.0",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.0",
     "react-navigation-tabs": "^2.9.2",
@@ -54,7 +53,9 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4"
   },
   "private": true
 }
