--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "react-native-dropdown-picker": "^3.7.0",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "~1.7.0",
-    "react-native-image-picker": "^2.3.4",
     "react-native-modal": "^11.5.6",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
@@ -39,6 +38,7 @@
     "react-native-tab-view": "^2.15.2",
     "react-native-textinput-with-icons": "^1.0.18",
     "react-native-underline-tabbar": "^1.3.6",
+    "react-native-unimodules": "^0.11.0",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-native-webview": "^10.7.0",
@@ -50,7 +50,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "expo-image-picker": "~9.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
